# nvptx-rs

./: Cargo.toml  LICENSE-MIT  README.md
host-code/: Cargo.toml  build.rs
host-code/src/: add.rs  himeno.rs  lib.rs  matrixmultiplication.rs  memcpy.rs  reduction.rs  rgba2gray.rs  stencil.rs  texture_memcpy.rs
kernels/: Cargo.toml  rust-toolchain.toml
kernels/.cargo/: config.toml
kernels/src/: intrinsics.rs  lib.rs  linear.rs  matrixmultiplication.rs  reduction.rs  stencil.rs  tex_object.rs  util.rs
xtask/src/: main.rs
